concepts/Security/Network Policy/network-policy-pod-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
   matchLabels:
     role: db
  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
         macthLabels:
            name: api-pod
      namespaceSelector:
         matchLabels:
             name: prod
    ports:
    - protocol: TCP
      port: 3306
